# prost_live

./: Cargo.toml  README.md  build.rs  person.proto
examples/: person.rs
src/: lib.rs
src/pb/: mod.rs  person.rs
